manifests/ingress/monitoring-proxy.yml
# ArgoCD 서버 서비스 프록시
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80

---
# Linkerd Viz 서비스 프록시
apiVersion: v1
kind: Service
metadata:
  name: linkerd-viz-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: web.linkerd-viz.svc.cluster.local
  ports:
    - port: 8084
      targetPort: 8084

---
# Grafana 서비스 프록시
apiVersion: v1
kind: Service
metadata:
  name: grafana-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: prometheus-grafana.monitoring.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
