manifests/ingress/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.wonq.store
      secretName: wonq-store-grafana-tls
  rules:
    - host: grafana.wonq.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-proxy
                port:
                  number: 80
