manifests/ingress/linkerd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - linkerd.wonq.store
      secretName: wonq-store-linkerd-tls
  rules:
    - host: linkerd.wonq.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkerd-viz-proxy
                port:
                  number: 8084
