manifests/ingress/monitoring-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.wonq.store
        - linkerd.wonq.store
        - grafana.wonq.store
      secretName: wonq-store-monitoring-tls
  rules:
    - host: argocd.wonq.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server-proxy
                port:
                  number: 80

    - host: linkerd.wonq.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkerd-viz-proxy
                port:
                  number: 8084

    - host: grafana.wonq.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-proxy
                port:
                  number: 80
