manifests/ingress/service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: www.wonq.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wonq-order-user-client-proxy
                port:
                  number: 3000

    - host: merchant.wonq.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wonq-order-merchant-client-proxy
                port:
                  number: 3000

    - host: api.wonq.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wonq-order-server-proxy
                port:
                  number: 8080

    - host: app-card.wonq.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-card-server-proxy
                port:
                  number: 8080

    - host: card.wonq.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: card-server-proxy
                port:
                  number: 8080

    - host: bank.wonq.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bank-server-proxy
                port:
                  number: 9090

    - host: pg-client.wonq.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pg-client-proxy
                port:
                  number: 3000

    - host: pg-server.wonq.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pg-server-proxy
                port:
                  number: 8080
